[package]
name = "bevy_experiments"
version = "0.1.0"
publish = false
authors = ["Erik Vroon"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_kira_audio = { version = "0.18.0" }
bevy_asset_loader = { version = "0.18.0" }
bevy_rapier3d = { version = "0.23.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy_egui = "0.24.0"
bevy_tasks = "0.12.1"
noise = "0.8.2"

rand = { version = "0.8.5" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
bevy_panorbit_camera = "0.10.0"

[build-dependencies]
embed-resource = "1.8.0"
