[package]
name = "bevy_hydrology"
version = "0.1.0"
publish = false
authors = ["Erik Vroon"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.13.1", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "hdr",
    "x11",
    "tonemapping_luts",
    "default_font",
] }
bevy_asset_loader = { version = "0.20.0" }
bevy_egui = "0.26.0"
noise = "0.9.0"
rand = { version = "0.8.5" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29.15", default-features = false }
image = { version = "0.25", default-features = false }
bevy_panorbit_camera = "0.17.0"

[build-dependencies]
embed-resource = "1.8.0"
